force-app/main/default/objects/Order_Item__c/Order_Item__c.object-meta.xml
<CustomObject>
    <label>OrderItem</label>
    <nameField>
        <displayFormat>CDOL-{0000000}</displayFormat>
        <label>Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>