force-app/main/default/objects/Order_Item__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <label>Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>