force-app/main/default/objects/Order_Item__c/fields/Product_Variant_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Variant_Id__c</fullName>
    <label>Product Variant Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>