force-app/main/default/objects/Order_Item__c/fields/Subtotal_Price__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Price__c</fullName>
    <label>Subtotal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>