force-app/main/default/objects/Order_Item__c/fields/Tax_Price__c.field-meta.xml
<CustomField>
    <fullName>Tax_Price__c</fullName>
    <label>Tax Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>