force-app/main/default/objects/Order_Item__c/fields/Trello_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>Trello_Card_ID__c</fullName>
    <label>Trello Card ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>