force-app/main/default/objects/Order_Item__c/fields/Variant_Type__c.field-meta.xml
<CustomField>
    <fullName>Variant_Type__c</fullName>
    <label>Variant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>