force-app/main/default/objects/Order_Item__c/fields/Weight_gm__c.field-meta.xml
<CustomField>
    <fullName>Weight_gm__c</fullName>
    <label>Weight (gm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>