force-app/main/default/objects/Order_Item__c/listViews/Shopify_Order_Products.listView-meta.xml
<ListView>
    <fullName>Shopify_Order_Products</fullName>
    <columns>Product_Name__c</columns>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Quantity__c</columns>
    <columns>List_Price__c</columns>
    <columns>Discounts__c</columns>
    <columns>Subtotal_Price__c</columns>
    <columns>Tax_Price__c</columns>
    <columns>Weight_gm__c</columns>
    <columns>Vendor__c</columns>
    <filterScope>Mine</filterScope>
    <label>Shopify Order Products</label>
</ListView>